# psds-cpp-2025

.github/workflows/: testing.yml  testing_week_01.yml  testing_week_02.yml  testing_week_03.yml  testing_week_04.yml
01_week/: 01_basic_cpp.md
01_week/tasks/: CMakeLists.txt
02_week/: 02_cv_ref_ptr.md  CMakeLists.txt
02_week/examples/: const_cast.cpp  ptr_access.cpp  ptr_address.cpp  ptr_arithmetic.cpp  ref.cpp  reinterpret.cpp
02_week/tasks/: CMakeLists.txt
02_week/tasks/func_array/: CMakeLists.txt  README.md  func_array.cpp  test.cpp
02_week/tasks/last_of_us/: CMakeLists.txt  README.md  last_of_us.cpp  test.cpp
02_week/tasks/little_big/: CMakeLists.txt  README.md  little_big.cpp  test.cpp
02_week/tasks/longest/: CMakeLists.txt  README.md  longest.cpp  test.cpp
02_week/tasks/pretty_array/: CMakeLists.txt  README.md  pretty_array.cpp  test.cpp
02_week/tasks/swap_ptr/: CMakeLists.txt  README.md  swap_ptr.cpp  test.cpp
03_week/: 03_data_structures.md  CMakeLists.txt
03_week/examples/: struct_examples.cpp  union_examples.cpp  vector_examples.cpp
03_week/tasks/: CMakeLists.txt
03_week/tasks/data_stats/: CMakeLists.txt  README.md  data_stats.cpp  test.cpp
03_week/tasks/easy_compare/: CMakeLists.txt  README.md  easy_compare.cpp  test.cpp
03_week/tasks/enum_operators/: CMakeLists.txt  README.md  enum_operators.cpp  test.cpp
03_week/tasks/filter/: CMakeLists.txt  README.md  filter.cpp  test.cpp
03_week/tasks/find_all/: CMakeLists.txt  README.md  find_all.cpp  test.cpp
03_week/tasks/minmax/: CMakeLists.txt  README.md  minmax.cpp  test.cpp
03_week/tasks/os_overload/: CMakeLists.txt  README.md  os_overload.cpp  test.cpp
03_week/tasks/range/: CMakeLists.txt  README.md  range.cpp  test.cpp
03_week/tasks/unique/: CMakeLists.txt  README.md  test.cpp  unique.cpp
04_week/: 04_class.md  CMakeLists.txt
04_week/tasks/: CMakeLists.txt
04_week/tasks/phasor/: CMakeLists.txt  README.md  phasor.cpp  test.cpp
04_week/tasks/queue/: CMakeLists.txt  README.md  queue.cpp  test.cpp
04_week/tasks/ring_buffer/: CMakeLists.txt  README.md  ring_buffer.cpp  test.cpp
04_week/tasks/stack/: CMakeLists.txt  README.md  stack.cpp  test.cpp
grading/: deadlines.json
(+5 files in other folders)
